changes in files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>select style</h1>
-    <nav>
+    <nav class="nav">
         <a href="index.html">HOME</a>
         <a href="shirts.html">SHIRTS</a>
         <a href="pants.html">PANTS</a>
